--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
 .App {
+  margin-top: 200px;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+button{
+  padding: 15px 0px;
+  width: 200px;
+  background: rgb(227, 126, 255);
   color: white;
+ font-family: 'Arial, sans-serif';
+ border-radius: 10px;
+ cursor: pointer;
+ 
 }
-
-.App-link {
-  color: #61dafb;
+button:hover{
+  background-color: rgb(106, 5, 134);
+  
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.p1{
+  font-size: 2rem;
+  font-family: sans-serif;
+  color: rgb(88, 1, 1);
+  
+}
+.div{
+  color: bisque;
+  font-size: 1.5rem;
+  text-align: center;
+}
+p{
+  width: 500px;
+  text-align: center;
+  margin-left: 510px;
 }
